# ECE560-Graphics

./: ECE560-Graphics-Syllabus.md  README.md
hw/: Earth-Moon.md  RedShiftSimulator.md  Saturn-Rings.md  SolarSystem1.md  SolarSystem2.md  Sun-Earth-Moon.md
midtermreview/: midterm.md
sessions/01processing/s02_anim/: s02_anim.pde
sessions/01processing/s03_multiball/: s03_multiball.pde
sessions/02/s01_review/: s01_review.pde
sessions/02/s02_anim/: s02_anim.pde
sessions/02/s03_transforms/: s03_transforms.pde
sessions/02/s04b_rotate/: s04b_rotate.pde
sessions/02/s05_multi_transform/: s05_multi_transform.pde
sessions/03/s02_triangle/: s02_triangle.pde
sessions/03/s05_earth/: s05_earth.pde
sessions/03processing3d/s01_box/: s01_box.pde
sessions/03processing3d/s03_pyramid/: s03_pyramid.pde
sessions/03processing3d/s04_sphere/: s04_sphere.pde
sessions/03processing3d/s05_earth/: s05_earth.pde
sessions/04/s01_transformations/: s01_transformations.pde
sessions/05camera_lights/s01_camera/: s01_camera.pde
sessions/05camera_lights/s04_light/: s04_light.pde
sessions/05camera_lights/so2_precision_error/: so2_precision_error.pde
sessions/06legacyOpenGL/: .gitignore  00nodraw  00nodraw.cpp  01emptywindow  01emptywindow.cpp  02hellosphere  02hellosphere.cpp  02hellotriangle  03hellotriangle  03hellotriangle.cpp  04gouraudtriangles  04gouraudtriangles.cpp  05hiddensurface  05hiddensurface.cpp  06drawingmodes  06drawingmodes.cpp  Makefile
sessions/07modernopengl/: 00rectangle_with_border  00rectangle_with_border.cpp  00simple.frag  Makefile  hemisphere.cpp
sessions/08modernopengl/: 04transform.cc  05cylinder.cc  06heatmap.cc  07lighting.cc  07lighting.frag  07lighting.vert  Makefile  Shape.cpp  Shape.hpp
sessions/08modernopengl/common/: common.cc
sessions/09raytracing/01array/: HW_RayTracing.md  a.out  camera.h  color.h  main.cc  out_8core.ppm  raytrace_opt  raytrace_unopt
sessions/09raytracing/01basic/: camera.h  main.cc  rtweekend.h
sessions/09raytracing/02conf/: a.out  config.h  geometry.hpp  main.cc  out_opt.ppm  test1.cfg  testgeometry.cpp
sessions/09raytracing/02multithread/: a.out  camera.h  rtweekend.h  test1d.ppm
sessions/09raytracing/hw/: camera.h  earthmoon  earthmoon.conf  earthmoon.scene  main.cc  material.h  proposed_new_test.conf  space  space.conf  space2  space2.conf  space2b  space2b.conf  space2d  space2d.conf  space2e  space2e.conf  space2f  space2f.conf  space2g  space2g.conf  space3.conf  test.ppm  test2  test3  test4  test5.conf  texturedsphere.h
sessions/10shaders/: hw_triangle.glsl  shadercircle.glsl
sessions/11vulkan/: 00_introvulkan.cpp  01_vulkan.cpp  02_hellotriangle.cpp  03_rotating_triangle.cpp  04_sphere.cpp  04_vulkantext.cpp  Makefile  simple_frag.glsl  simple_frag_spv.h  sphere.hpp  sphere_vert.glsl  sphere_vert.spv  sphere_vert_spv.h  sphere_with_indices.hpp  triangle_transform_vert.glsl  triangle_transform_vert.spv  triangle_transform_vert_spv.h  triangle_vert.glsl  triangle_vert.spv  triangle_vert_spv.h  vulkan_common.cpp  vulkan_common.hpp
sessions/s01_first/: s01_first.pde
slides/: Critiques_Visualization.md  Processing3D.md  References.md
slides/session_math/: a.out  transforms.cpp
src/: .gitignore
src/00processing/3d_intro/: ImageFileFormats.md
src/00processing/s00_first/: s00_first.pde
src/00processing/s01_functions/: s01_functions.pde
src/00processing/s03_bouncefloat/: s03_bouncefloat.pde
src/00processing/s04_multibounce/: s04_multibounce.pde
src/00processing/s05_sierpinski/: s05_sierpinski.pde
src/01OpenGL/: Makefile  lighting  lighting.cpp
src/01processing/spherelight/: spherelight.pde
src/02ModernOpenGL/: a.out
src/02ModernOpenGL/heatmap/: heatmap.fs
src/02ModernOpenGL/lighting/: Makefile  glad.c  lighting  lighting.cpp  lighting.fs  utils.cpp  utils.h  vertex_shader.glsl
src/02b_modernopengl/: CMakeLists.txt  graphics_core.cpp  graphics_core.hh  opengl_core.cpp  tut02.cpp  vulkan_core.cpp
src/02b_modernopengl/buidl/: CMakeCache.txt  Makefile  cmake_install.cmake
src/02b_modernopengl/models/: buddha.blobj.lzma  sponza.obj.lzma
src/02b_modernopengl/old/: 03gouraud.cc  convert_obj_blockloader.cpp  midterm_problem_key.md  mwe.cpp  testblockload.cpp  util.hh  vulkan_core.hh
src/02modernopengl/: #test#  .#test  02b_rect.cc  02simple.vert  02triangle.cc  03gouraud.cc  04transform.vert  06c_litsphere.cpp  Makefile  lighting.cpp  loadmodel.cpp  mesh.hh  mwe.cpp  mwe2.cpp  texture.cpp  util.hh
src/02modernopengl/common/: common.cc  common.hh  mwe_base.cpp
src/02modernopengl/models/: antique_ceramic_vase_01_4k.obj.lzma  antique_vase.blobj  antique_vase.blobj.lzma  buddha.blobj  buddha.obj.lzma  sponza.blobj.lzma
src/03raytracing/: 00virtualfuncs.cpp
src/03raytracing/00cleaned_ray/: log  raytrace  test1  test2.conf  test2.conf~  test3.conf  test3.conf~  test4.conf  test4.conf~  test5.conf~
src/03raytracing/InOneWeekend/: raytracing  (+1 more)
src/04Vulkan/: 01Vulkan_triangle.cpp
src/c++/: 03raii_example_vector.cpp
src/datastruct/: axis_aligned_bounding_box.hh  binary_tree.cpp  octree.cpp  quadtree.cpp
src/gen2test/: .gitignore  CMakeLists.txt  README.md  README.md~
src/gen2test/02opengl/: 03_trianglecolor.cpp  04_gouraud.cpp  05_rect.cpp  08_keymap.cpp  09_texture.cpp  10_lighting.cpp  10_loadmodel.cpp  11_procedural_terrain.cpp  12_dynamic_shader.cpp  13_birthday.cpp  14_fasttext.cpp  15_heightmap.cpp  CMakeLists.txt  maze.hh  precompiled_shader_example.cpp  shader_fasttext.hh  shader_gouraud.hh  shader_gouraudtransform.hh  shader_heightmap.hh  shader_lighting.hh  shader_mandelbrot.hh  shader_simple.hh  shader_terrain.hh  shader_texture_transform.hh  shadertoy_example.glsl  shape.hpp  terrain.hh
src/gen2test/02opengl/old/: 02triangle.cc  03hwgouraud_cube.cc  lighting.cpp  texture.cpp
src/gen2test/c++/: 00useful_language_features.cpp  01exceptions.cpp  02memory_leaks.cpp
src/gen2test/common/: CMakeLists.txt  convert_obj_blockloader.cpp  ex.hh  graphics_core.hh  mesh.cpp  mesh.hh  opengl_core.cpp
src/gen2test/models/: buddha.blobj2  buddha.blobj2.lzma
(+43 files in other folders)
